src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions
Rule 2     program -> <empty>
Rule 3     instructions -> instructions instruction
Rule 4     instructions -> instruction
Rule 5     instruction -> block
Rule 6     instruction -> if
Rule 7     instruction -> for
Rule 8     instruction -> while
Rule 9     instruction -> break ;
Rule 10    instruction -> continue ;
Rule 11    instruction -> return ;
Rule 12    instruction -> print ;
Rule 13    instruction -> statement ;
Rule 14    block -> { instructions }
Rule 15    if -> IF ( condition ) instruction
Rule 16    if -> IF ( condition ) instruction ELSE instruction
Rule 17    for -> FOR variable ASSIGN expression : expression instruction
Rule 18    while -> WHILE ( condition ) instruction
Rule 19    break -> BREAK
Rule 20    continue -> CONTINUE
Rule 21    return -> RETURN
Rule 22    return -> RETURN expression
Rule 23    return -> RETURN condition
Rule 24    print -> PRINT parameters
Rule 25    statement -> assign
Rule 26    statement -> expression
Rule 27    assign -> assignable ASSIGN expression
Rule 28    assign -> assignable ADDASSIGN expression
Rule 29    assign -> assignable MINASSIGN expression
Rule 30    assign -> assignable MULASSIGN expression
Rule 31    assign -> assignable DIVASSIGN expression
Rule 32    assignable -> variable
Rule 33    assignable -> reference
Rule 34    condition -> expression LT expression
Rule 35    condition -> expression GT expression
Rule 36    condition -> expression LTE expression
Rule 37    condition -> expression GTE expression
Rule 38    condition -> expression NE expression
Rule 39    condition -> expression EQ expression
Rule 40    expression -> expression ADD expression
Rule 41    expression -> expression MIN expression
Rule 42    expression -> expression MUL expression
Rule 43    expression -> expression DIV expression
Rule 44    expression -> expression DOTADD expression
Rule 45    expression -> expression DOTMIN expression
Rule 46    expression -> expression DOTMUL expression
Rule 47    expression -> expression DOTDIV expression
Rule 48    expression -> MIN expression
Rule 49    expression -> matrix_obj TRANSPOSE
Rule 50    expression -> variable TRANSPOSE
Rule 51    expression -> STR
Rule 52    expression -> matrix_obj
Rule 53    expression -> vector
Rule 54    expression -> assignable
Rule 55    expression -> number
Rule 56    matrix_obj -> matrix
Rule 57    matrix_obj -> matrix_function
Rule 58    matrix -> [ rows ; ]
Rule 59    rows -> rows ; row
Rule 60    rows -> row
Rule 61    row -> parameters
Rule 62    vector -> [ parameters ]
Rule 63    matrix_function -> EYE ( parameters )
Rule 64    matrix_function -> ZEROS ( parameters )
Rule 65    matrix_function -> ONES ( parameters )
Rule 66    parameters -> parameters , expression
Rule 67    parameters -> expression
Rule 68    reference -> variable [ parameters ]
Rule 69    number -> INT
Rule 70    number -> FLOAT
Rule 71    variable -> ID

Terminals, with rules where they appear

(                    : 15 16 18 63 64 65
)                    : 15 16 18 63 64 65
,                    : 66
:                    : 17
;                    : 9 10 11 12 13 58 59
ADD                  : 40
ADDASSIGN            : 28
ASSIGN               : 17 27
BREAK                : 19
CONTINUE             : 20
DIV                  : 43
DIVASSIGN            : 31
DOTADD               : 44
DOTDIV               : 47
DOTMIN               : 45
DOTMUL               : 46
ELSE                 : 16
EQ                   : 39
EYE                  : 63
FLOAT                : 70
FOR                  : 17
GT                   : 35
GTE                  : 37
ID                   : 71
IF                   : 15 16
INT                  : 69
LT                   : 34
LTE                  : 36
MIN                  : 41 48
MINASSIGN            : 29
MUL                  : 42
MULASSIGN            : 30
NE                   : 38
ONES                 : 65
PRINT                : 24
RETURN               : 21 22 23
STR                  : 51
TRANSPOSE            : 49 50
WHILE                : 18
ZEROS                : 64
[                    : 58 62 68
]                    : 58 62 68
error                : 
{                    : 14
}                    : 14

Nonterminals, with rules where they appear

assign               : 25
assignable           : 27 28 29 30 31 54
block                : 5
break                : 9
condition            : 15 16 18 23
continue             : 10
expression           : 17 17 22 26 27 28 29 30 31 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 66 67
for                  : 7
if                   : 6
instruction          : 3 4 15 16 16 17 18
instructions         : 1 3 14
matrix               : 56
matrix_function      : 57
matrix_obj           : 49 52
number               : 55
parameters           : 24 61 62 63 64 65 66 68
print                : 12
program              : 0
reference            : 33
return               : 11
row                  : 59 60
rows                 : 58 59
statement            : 13
variable             : 17 32 50 68
vector               : 53
while                : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions
    (2) program -> .
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . block
    (6) instruction -> . if
    (7) instruction -> . for
    (8) instruction -> . while
    (9) instruction -> . break ;
    (10) instruction -> . continue ;
    (11) instruction -> . return ;
    (12) instruction -> . print ;
    (13) instruction -> . statement ;
    (14) block -> . { instructions }
    (15) if -> . IF ( condition ) instruction
    (16) if -> . IF ( condition ) instruction ELSE instruction
    (17) for -> . FOR variable ASSIGN expression : expression instruction
    (18) while -> . WHILE ( condition ) instruction
    (19) break -> . BREAK
    (20) continue -> . CONTINUE
    (21) return -> . RETURN
    (22) return -> . RETURN expression
    (23) return -> . RETURN condition
    (24) print -> . PRINT parameters
    (25) statement -> . assign
    (26) statement -> . expression
    (27) assign -> . assignable ASSIGN expression
    (28) assign -> . assignable ADDASSIGN expression
    (29) assign -> . assignable MINASSIGN expression
    (30) assign -> . assignable MULASSIGN expression
    (31) assign -> . assignable DIVASSIGN expression
    (40) expression -> . expression ADD expression
    (41) expression -> . expression MIN expression
    (42) expression -> . expression MUL expression
    (43) expression -> . expression DIV expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTMIN expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . MIN expression
    (49) expression -> . matrix_obj TRANSPOSE
    (50) expression -> . variable TRANSPOSE
    (51) expression -> . STR
    (52) expression -> . matrix_obj
    (53) expression -> . vector
    (54) expression -> . assignable
    (55) expression -> . number
    (32) assignable -> . variable
    (33) assignable -> . reference
    (56) matrix_obj -> . matrix
    (57) matrix_obj -> . matrix_function
    (71) variable -> . ID
    (62) vector -> . [ parameters ]
    (69) number -> . INT
    (70) number -> . FLOAT
    (68) reference -> . variable [ parameters ]
    (58) matrix -> . [ rows ; ]
    (63) matrix_function -> . EYE ( parameters )
    (64) matrix_function -> . ZEROS ( parameters )
    (65) matrix_function -> . ONES ( parameters )

    $end            reduce using rule 2 (program -> .)
    {               shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    MIN             shift and go to state 25
    STR             shift and go to state 27
    ID              shift and go to state 33
    [               shift and go to state 34
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    EYE             shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39

    program                        shift and go to state 1
    instructions                   shift and go to state 2
    instruction                    shift and go to state 3
    block                          shift and go to state 4
    if                             shift and go to state 5
    for                            shift and go to state 6
    while                          shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    return                         shift and go to state 10
    print                          shift and go to state 11
    statement                      shift and go to state 12
    variable                       shift and go to state 16
    expression                     shift and go to state 17
    assign                         shift and go to state 23
    assignable                     shift and go to state 24
    matrix_obj                     shift and go to state 26
    vector                         shift and go to state 28
    number                         shift and go to state 29
    reference                      shift and go to state 30
    matrix                         shift and go to state 31
    matrix_function                shift and go to state 32

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions .
    (3) instructions -> instructions . instruction
    (5) instruction -> . block
    (6) instruction -> . if
    (7) instruction -> . for
    (8) instruction -> . while
    (9) instruction -> . break ;
    (10) instruction -> . continue ;
    (11) instruction -> . return ;
    (12) instruction -> . print ;
    (13) instruction -> . statement ;
    (14) block -> . { instructions }
    (15) if -> . IF ( condition ) instruction
    (16) if -> . IF ( condition ) instruction ELSE instruction
    (17) for -> . FOR variable ASSIGN expression : expression instruction
    (18) while -> . WHILE ( condition ) instruction
    (19) break -> . BREAK
    (20) continue -> . CONTINUE
    (21) return -> . RETURN
    (22) return -> . RETURN expression
    (23) return -> . RETURN condition
    (24) print -> . PRINT parameters
    (25) statement -> . assign
    (26) statement -> . expression
    (27) assign -> . assignable ASSIGN expression
    (28) assign -> . assignable ADDASSIGN expression
    (29) assign -> . assignable MINASSIGN expression
    (30) assign -> . assignable MULASSIGN expression
    (31) assign -> . assignable DIVASSIGN expression
    (40) expression -> . expression ADD expression
    (41) expression -> . expression MIN expression
    (42) expression -> . expression MUL expression
    (43) expression -> . expression DIV expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTMIN expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . MIN expression
    (49) expression -> . matrix_obj TRANSPOSE
    (50) expression -> . variable TRANSPOSE
    (51) expression -> . STR
    (52) expression -> . matrix_obj
    (53) expression -> . vector
    (54) expression -> . assignable
    (55) expression -> . number
    (32) assignable -> . variable
    (33) assignable -> . reference
    (56) matrix_obj -> . matrix
    (57) matrix_obj -> . matrix_function
    (71) variable -> . ID
    (62) vector -> . [ parameters ]
    (69) number -> . INT
    (70) number -> . FLOAT
    (68) reference -> . variable [ parameters ]
    (58) matrix -> . [ rows ; ]
    (63) matrix_function -> . EYE ( parameters )
    (64) matrix_function -> . ZEROS ( parameters )
    (65) matrix_function -> . ONES ( parameters )

    $end            reduce using rule 1 (program -> instructions .)
    {               shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    MIN             shift and go to state 25
    STR             shift and go to state 27
    ID              shift and go to state 33
    [               shift and go to state 34
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    EYE             shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39

    instruction                    shift and go to state 40
    block                          shift and go to state 4
    if                             shift and go to state 5
    for                            shift and go to state 6
    while                          shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    return                         shift and go to state 10
    print                          shift and go to state 11
    statement                      shift and go to state 12
    variable                       shift and go to state 16
    expression                     shift and go to state 17
    assign                         shift and go to state 23
    assignable                     shift and go to state 24
    matrix_obj                     shift and go to state 26
    vector                         shift and go to state 28
    number                         shift and go to state 29
    reference                      shift and go to state 30
    matrix                         shift and go to state 31
    matrix_function                shift and go to state 32

state 3

    (4) instructions -> instruction .

    {               reduce using rule 4 (instructions -> instruction .)
    IF              reduce using rule 4 (instructions -> instruction .)
    FOR             reduce using rule 4 (instructions -> instruction .)
    WHILE           reduce using rule 4 (instructions -> instruction .)
    BREAK           reduce using rule 4 (instructions -> instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instruction .)
    RETURN          reduce using rule 4 (instructions -> instruction .)
    PRINT           reduce using rule 4 (instructions -> instruction .)
    MIN             reduce using rule 4 (instructions -> instruction .)
    STR             reduce using rule 4 (instructions -> instruction .)
    ID              reduce using rule 4 (instructions -> instruction .)
    [               reduce using rule 4 (instructions -> instruction .)
    INT             reduce using rule 4 (instructions -> instruction .)
    FLOAT           reduce using rule 4 (instructions -> instruction .)
    EYE             reduce using rule 4 (instructions -> instruction .)
    ZEROS           reduce using rule 4 (instructions -> instruction .)
    ONES            reduce using rule 4 (instructions -> instruction .)
    $end            reduce using rule 4 (instructions -> instruction .)
    }               reduce using rule 4 (instructions -> instruction .)


state 4

    (5) instruction -> block .

    {               reduce using rule 5 (instruction -> block .)
    IF              reduce using rule 5 (instruction -> block .)
    FOR             reduce using rule 5 (instruction -> block .)
    WHILE           reduce using rule 5 (instruction -> block .)
    BREAK           reduce using rule 5 (instruction -> block .)
    CONTINUE        reduce using rule 5 (instruction -> block .)
    RETURN          reduce using rule 5 (instruction -> block .)
    PRINT           reduce using rule 5 (instruction -> block .)
    MIN             reduce using rule 5 (instruction -> block .)
    STR             reduce using rule 5 (instruction -> block .)
    ID              reduce using rule 5 (instruction -> block .)
    [               reduce using rule 5 (instruction -> block .)
    INT             reduce using rule 5 (instruction -> block .)
    FLOAT           reduce using rule 5 (instruction -> block .)
    EYE             reduce using rule 5 (instruction -> block .)
    ZEROS           reduce using rule 5 (instruction -> block .)
    ONES            reduce using rule 5 (instruction -> block .)
    $end            reduce using rule 5 (instruction -> block .)
    }               reduce using rule 5 (instruction -> block .)
    ELSE            reduce using rule 5 (instruction -> block .)


state 5

    (6) instruction -> if .

    {               reduce using rule 6 (instruction -> if .)
    IF              reduce using rule 6 (instruction -> if .)
    FOR             reduce using rule 6 (instruction -> if .)
    WHILE           reduce using rule 6 (instruction -> if .)
    BREAK           reduce using rule 6 (instruction -> if .)
    CONTINUE        reduce using rule 6 (instruction -> if .)
    RETURN          reduce using rule 6 (instruction -> if .)
    PRINT           reduce using rule 6 (instruction -> if .)
    MIN             reduce using rule 6 (instruction -> if .)
    STR             reduce using rule 6 (instruction -> if .)
    ID              reduce using rule 6 (instruction -> if .)
    [               reduce using rule 6 (instruction -> if .)
    INT             reduce using rule 6 (instruction -> if .)
    FLOAT           reduce using rule 6 (instruction -> if .)
    EYE             reduce using rule 6 (instruction -> if .)
    ZEROS           reduce using rule 6 (instruction -> if .)
    ONES            reduce using rule 6 (instruction -> if .)
    $end            reduce using rule 6 (instruction -> if .)
    }               reduce using rule 6 (instruction -> if .)
    ELSE            reduce using rule 6 (instruction -> if .)


state 6

    (7) instruction -> for .

    {               reduce using rule 7 (instruction -> for .)
    IF              reduce using rule 7 (instruction -> for .)
    FOR             reduce using rule 7 (instruction -> for .)
    WHILE           reduce using rule 7 (instruction -> for .)
    BREAK           reduce using rule 7 (instruction -> for .)
    CONTINUE        reduce using rule 7 (instruction -> for .)
    RETURN          reduce using rule 7 (instruction -> for .)
    PRINT           reduce using rule 7 (instruction -> for .)
    MIN             reduce using rule 7 (instruction -> for .)
    STR             reduce using rule 7 (instruction -> for .)
    ID              reduce using rule 7 (instruction -> for .)
    [               reduce using rule 7 (instruction -> for .)
    INT             reduce using rule 7 (instruction -> for .)
    FLOAT           reduce using rule 7 (instruction -> for .)
    EYE             reduce using rule 7 (instruction -> for .)
    ZEROS           reduce using rule 7 (instruction -> for .)
    ONES            reduce using rule 7 (instruction -> for .)
    $end            reduce using rule 7 (instruction -> for .)
    }               reduce using rule 7 (instruction -> for .)
    ELSE            reduce using rule 7 (instruction -> for .)


state 7

    (8) instruction -> while .

    {               reduce using rule 8 (instruction -> while .)
    IF              reduce using rule 8 (instruction -> while .)
    FOR             reduce using rule 8 (instruction -> while .)
    WHILE           reduce using rule 8 (instruction -> while .)
    BREAK           reduce using rule 8 (instruction -> while .)
    CONTINUE        reduce using rule 8 (instruction -> while .)
    RETURN          reduce using rule 8 (instruction -> while .)
    PRINT           reduce using rule 8 (instruction -> while .)
    MIN             reduce using rule 8 (instruction -> while .)
    STR             reduce using rule 8 (instruction -> while .)
    ID              reduce using rule 8 (instruction -> while .)
    [               reduce using rule 8 (instruction -> while .)
    INT             reduce using rule 8 (instruction -> while .)
    FLOAT           reduce using rule 8 (instruction -> while .)
    EYE             reduce using rule 8 (instruction -> while .)
    ZEROS           reduce using rule 8 (instruction -> while .)
    ONES            reduce using rule 8 (instruction -> while .)
    $end            reduce using rule 8 (instruction -> while .)
    }               reduce using rule 8 (instruction -> while .)
    ELSE            reduce using rule 8 (instruction -> while .)


state 8

    (9) instruction -> break . ;

    ;               shift and go to state 41


state 9

    (10) instruction -> continue . ;

    ;               shift and go to state 42


state 10

    (11) instruction -> return . ;

    ;               shift and go to state 43


state 11

    (12) instruction -> print . ;

    ;               shift and go to state 44


state 12

    (13) instruction -> statement . ;

    ;               shift and go to state 45


state 13

    (14) block -> { . instructions }
    (3) instructions -> . instructions instruction
    (4) instructions -> . instruction
    (5) instruction -> . block
    (6) instruction -> . if
    (7) instruction -> . for
    (8) instruction -> . while
    (9) instruction -> . break ;
    (10) instruction -> . continue ;
    (11) instruction -> . return ;
    (12) instruction -> . print ;
    (13) instruction -> . statement ;
    (14) block -> . { instructions }
    (15) if -> . IF ( condition ) instruction
    (16) if -> . IF ( condition ) instruction ELSE instruction
    (17) for -> . FOR variable ASSIGN expression : expression instruction
    (18) while -> . WHILE ( condition ) instruction
    (19) break -> . BREAK
    (20) continue -> . CONTINUE
    (21) return -> . RETURN
    (22) return -> . RETURN expression
    (23) return -> . RETURN condition
    (24) print -> . PRINT parameters
    (25) statement -> . assign
    (26) statement -> . expression
    (27) assign -> . assignable ASSIGN expression
    (28) assign -> . assignable ADDASSIGN expression
    (29) assign -> . assignable MINASSIGN expression
    (30) assign -> . assignable MULASSIGN expression
    (31) assign -> . assignable DIVASSIGN expression
    (40) expression -> . expression ADD expression
    (41) expression -> . expression MIN expression
    (42) expression -> . expression MUL expression
    (43) expression -> . expression DIV expression
    (44) expression -> . expression DOTADD expression
    (45) expression -> . expression DOTMIN expression
    (46) expression -> . expression DOTMUL expression
    (47) expression -> . expression DOTDIV expression
    (48) expression -> . MIN expression
    (49) expression -> . matrix_obj TRANSPOSE
    (50) expression -> . variable TRANSPOSE
    (51) expression -> . STR
    (52) expression -> . matrix_obj
    (53) expression -> . vector
    (54) expression -> . assignable
    (55) expression -> . number
    (32) assignable -> . variable
    (33) assignable -> . reference
    (56) matrix_obj -> . matrix
    (57) matrix_obj -> . matrix_function
    (71) variable -> . ID
    (62) vector -> . [ parameters ]
    (69) number -> . INT
    (70) number -> . FLOAT
    (68) reference -> . variable [ parameters ]
    (58) matrix -> . [ rows ; ]
    (63) matrix_function -> . EYE ( parameters )
    (64) matrix_function -> . ZEROS ( parameters )
    (65) matrix_function -> . ONES ( parameters )

    {               shift and go to state 13
    IF              shift and go to state 14
    FOR             shift and go to state 15
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    MIN             shift and go to state 25
    STR             shift and go to state 27
    ID              shift and go to state 33
    [               shift and go to state 34
    INT             shift and go to state 35
    FLOAT           shift and go to state 36
    EYE             shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39

    instructions                   shift and go to state 46
    instruction                    shift and go to state 3
    block                          shift and go to state 4
    if                             shift and go to state 5
    for                            shift and go to state 6
    while                          shift and go to state 7
    break                          shift and go to state 8
    continue                       shift and go to state 9
    return                         shift and go to state 10
    print                          shift and go to state 11
    statement                      shift and go to state 12
    variable                       shift and go to state 16
    expression                     shift and go to state 17
    assign                         shift and go to state 23
    assignable                     shift and go to state 24
    matrix_obj                     shift and go to state 26
    vector                         shift and go to state 28
    number                         shift and go to state 29
    reference                      shift and go to state 30
    matrix                         shift and go to state 31
    matrix_function                shift and go to state 32

state 14

    (15) if -> IF . ( condition ) instruction
    (16) if -> IF . ( condition ) instruction ELSE instruction

    (               shift and go to state 47


state 15

    (17) for -> FOR . variable ASSIGN expression : expression instruction
    (71) variable -> . ID

    ID              shift and go to state 33

    variable                       shift and go to state 48

state 16

    (50) expression -> variable . TRANSPOSE
    (32) assignable -> variable .
    (68) reference -> variable . [ parameters ]

  ! shift/reduce conflict for [ resolved as shift
    TRANSPOSE       shift and go to state 49
    ASSIGN          reduce using rule 32 (assignable -> variable .)
    ADDASSIGN       reduce using rule 32 (assignable -> variable .)
    MINASSIGN       reduce using rule 32 (assignable -> variable .)
    MULASSIGN       reduce using rule 32 (assignable -> variable .)
    DIVASSIGN       reduce using rule 32 (assignable -> variable .)
    ADD             reduce using rule 32 (assignable -> variable .)
    MIN             reduce using rule 32 (assignable -> variable .)
    MUL             reduce using rule 32 (assignable -> variable .)
    DIV             reduce using rule 32 (assignable -> variable .)
    DOTADD          reduce using rule 32 (assignable -> variable .)
    DOTMIN          reduce using rule 32 (assignable -> variable .)
    DOTMUL          reduce using rule 32 (assignable -> variable .)
    DOTDIV          reduce using rule 32 (assignable -> variable .)
    ;               reduce using rule 32 (assignable -> variable .)
    LT              reduce using rule 32 (assignable -> variable .)
    GT              reduce using rule 32 (assignable -> variable .)
    LTE             reduce using rule 32 (assignable -> variable .)
    GTE             reduce using rule 32 (assignable -> variable .)
    NE              reduce using rule 32 (assignable -> variable .)
    EQ              reduce using rule 32 (assignable -> variable .)
    ,               reduce using rule 32 (assignable -> variable .)
    ]               reduce using rule 32 (assignable -> variable .)
    )               reduce using rule 32 (assignable -> variable .)
    :               reduce using rule 32 (assignable -> variable .)
    {               reduce using rule 32 (assignable -> variable .)
    IF              reduce using rule 32 (assignable -> variable .)
    FOR             reduce using rule 32 (assignable -> variable .)
    WHILE           reduce using rule 32 (assignable -> variable .)
    BREAK           reduce using rule 32 (assignable -> variable .)
    CONTINUE        reduce using rule 32 (assignable -> variable .)
    RETURN          reduce using rule 32 (assignable -> variable .)
    PRINT           reduce using rule 32 (assignable -> variable .)
    STR             reduce using rule 32 (assignable -> variable .)
    ID              reduce using rule 32 (assignable -> variable .)
    INT             reduce using rule 32 (assignable -> variable .)
    FLOAT           reduce using rule 32 (assignable -> variable .)
    EYE             reduce using rule 32 (assignable -> variable .)
    ZEROS           reduce using rule 32 (assignable -> variable .)
    ONES            reduce using rule 32 (assignable -> variable .)
    [               shift and go to state 50

  ! [               [ reduce using rule 32 (assignable -> variable .) ]


state 17

    (26) statement -> expression .
    (40) expression -> expression . ADD expression
    (41) expression -> expression . MIN expression
    (42) expression -> expression . MUL expression
    (43) expression -> expression . DIV expression
    (44) expression -> expression . DOTADD expression
    (45) expression -> expression . DOTMIN expression
    (46) expression -> expression . DOTMUL expression
    (47) expression -> expression . DOTDIV expression

    ;               reduce using rule 26 (statement -> expression .)
    ADD             shift and go to state 51
    MIN             shift and go to state 52
    MUL             shift and go to state 53
    DIV             shift and go to state 54
    DOTADD          shift and go to state 55
    DOTMIN          shift and go to state 56
    DOTMUL          shift and go to state 57
    DOTDIV          shift and go to state 58


state 18

    (18) while -> WHILE . ( condition ) instruction

    (               shift and go to state 59


state 19

    (19) break -> BREAK .

    ;               reduce using rule 19 (break -> BREAK .)


state 20

    (20) continue -> CONTINUE .

    ;               reduce using rule 20 (continue -> CONTINUE .)


state 21
